# agent-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: agent_loop.py  library_quickstart.py
src/agent_memory/: __init__.py  cli.py  embeddings.py  server.py  store.py
tests/: test_embeddings.py  test_server.py  test_store.py
